Criando front-end

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="info-produto">
                     <span><strong>Bacon Cheese Burger</strong></span>
                     <span>Cheese Burger</span>
-                    <span>R$ 12,99</span>
+                    <span><strong>R$ 12,99</strong></span>
                 </div>
                 <div class="add-cart">
                     <img src="icons/cart.png" alt="" class="img-cart">
